k8s/monitoring/kafka-exporter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-exporter
  namespace: monitoring
  labels:
    app: kafka-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-exporter
  template:
    metadata:
      labels:
        app: kafka-exporter
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9308"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: kafka-exporter
          image: danielqsj/kafka-exporter:v1.8.0
          args:
            - --kafka.server=kafka-0.kafka-service.ecommerce.svc.cluster.local:9092
            - --kafka.server=kafka-1.kafka-service.ecommerce.svc.cluster.local:9092
            - --kafka.server=kafka-2.kafka-service.ecommerce.svc.cluster.local:9092
            - --web.listen-address=:9308
            - --group.filter=.*
            - --topic.filter=.*
          ports:
            - containerPort: 9308
              name: metrics
          resources:
            requests: { cpu: 20m, memory: 32Mi }
            limits:   { cpu: 100m, memory: 96Mi }
          readinessProbe:
            tcpSocket: { port: 9308 }
            initialDelaySeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-exporter
  namespace: monitoring
  labels:
    app: kafka-exporter
spec:
  selector:
    app: kafka-exporter
  ports:
    - name: metrics
      port: 9308
      targetPort: 9308
